fix(ExperimentView): address CSS misalignments (#536)

--- a/src/canvas/styles/main.scss
+++ b/src/canvas/styles/main.scss
@@ -459,7 +459,7 @@ aside .node > * {
 }
 
 h2 {
-  padding: 30px 30px;
+  padding: 30px 0px;
   text-align: left;
 }
 .fullscreen {
